--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+docs/images filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.webm filter=lfs diff=lfs merge=lfs -text
